themes/dev/static/css/style.css
/*Fonts*/
/*logo: teko*/
/*headings: "Roboto Slab","ff-tisa-web-pro","Georgia",Arial,sans-serif*/
/*content*: "Lato","proxima-nova","Helvetica Neue",Arial,sans-serif*/

/*Colours*/
/*Triad*: 032E54, A12C27, 1660A1, 97A106, 505408/*/
/*Monochromatic: 218EED, 4E82B0, 1660A1, 68AFED, 0F426E*/
/*logo: text=1761a0 wings=a01761

/*Breakpoints
for-phone-only: @media (max-width: 599px) {}
for-tablet-portrait-up: @media (min-width: 600px) {}
for-tablet-landscape-up: @media (min-width: 900px) {}
for-desktop-up: @media (min-width: 1200px) {}
for-big-desktop-up: @media (min-width: 1800px) {}*/

html {
  height: 100%;
}

body {
  text-rendering: optimizeLegibility;
  font-family: "Lato","proxima-nova","Helvetica Neue",Arial,sans-serif;
  margin: auto 0 auto;
  display: flex;
  flex-direction: column;
  font-size: 16px;
}

nav {
  background: #4E82B0;
  width: 100vw;
}

nav > ul {
  display: flex;
  flex-wrap: nowrap;
  padding: 0;
  margin: 0.5em 0;
}

nav li {
  box-sizing: border-box;
  flex: auto;
  list-style: none;
  text-align: center;
}

h1,h2,h3 {
  font-family: "Roboto Slab","ff-tisa-web-pro","Georgia",Arial,sans-serif;
}

p {
  line-height: 1.7;
  max-width: 33em;
}

footer {
  background: #4E82B0;
  width: 100vw;
  flex-shrink: 0;
  margin-top: 1em;
}

footer > ul {
  display: flex;
  flex-wrap: nowrap;
  padding: 0;
}

footer li {
  box-sizing: border-box;
  flex: auto;
  list-style: none;
  text-align: center;
}

nav, footer {
  color: #ffffff;
}

.content-wrapper{
  max-width: 48em;
  padding: 1em;
  background: #ffffff;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#banner {
  width: 90vw;
  display: block;
  margin: 1em auto;
}

.sublist {
  /* TODO: make visible when on larger screen format & using JS*/
  display: none;
}

.content {
  flex: 1 0 auto;
  background: rgba(0,0,0,0.05);
  align-items: center;
}

@media screen and (max-width: 599px) {
}

@media screen and (min-width: 900px) {
  nav {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    width: 300px;
    background: #68AFED;
  }
  nav > ul {
    flex-direction: column;
    display: none;
  }

  footer {
    /*unhide and do something with*/
    display: none;
  }

  section {
    margin-left: 300px;
  }

  #banner {
    width: 280px;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 10px;
    z-index: 100;
  }
}



/*@mixin for-phone-only {
  @media (max-width: 599px) { @content; }
}
@mixin for-tablet-portrait-up {
  @media (min-width: 600px) { @content; }
}
@mixin for-tablet-landscape-up {
  @media (min-width: 900px) { @content; }
}
@mixin for-desktop-up {
  @media (min-width: 1200px) { @content; }
}
@mixin for-big-desktop-up {
  @media (min-width: 1800px) { @content; }
}

// usage
.my-box {
  padding: 10px;
  
  @include for-desktop-up {
    padding: 20px;
  }
}

